// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUploadZone renders correctly - custom placeholder 1`] = `
<View
  accessibilityLabel="Upload your ID proof"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#202020",
          "borderColor": "#4D4D4D",
          "borderRadius": 12,
          "borderStyle": "dashed",
          "borderWidth": 1,
          "gap": 16,
          "paddingHorizontal": 16,
          "paddingVertical": 24,
        },
        {
          "borderColor": "#4D4D4D",
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#131313",
          "borderRadius": 12,
          "height": 54,
          "justifyContent": "center",
          "width": 54,
        }
      }
    >
      <View
        style={
          {
            "height": 32,
            "position": "relative",
            "width": 24,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#4D4D4D",
              "borderRadius": 2,
              "height": 28,
              "left": 2,
              "position": "absolute",
              "top": 2,
              "width": 20,
            }
          }
        />
        <View
          style={
            {
              "backgroundColor": "#202020",
              "borderBottomLeftRadius": 4,
              "height": 8,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 8,
            }
          }
        />
      </View>
    </View>
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
          },
          {
            "color": "#4D4D4D",
            "fontFamily": "PlusJakartaSans-Medium",
            "fontSize": 12,
            "lineHeight": 20,
            "textAlign": "center",
          },
        ]
      }
    >
      Upload your ID proof
    </Text>
    <View
      style={
        {
          "backgroundColor": "#4D4D4D",
          "borderRadius": 200,
          "height": 2,
          "width": 24,
        }
      }
    />
  </View>
</View>
`;

exports[`FileUploadZone renders correctly - default state 1`] = `
<View
  accessibilityLabel="Tap to upload your rental agreement"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#202020",
          "borderColor": "#4D4D4D",
          "borderRadius": 12,
          "borderStyle": "dashed",
          "borderWidth": 1,
          "gap": 16,
          "paddingHorizontal": 16,
          "paddingVertical": 24,
        },
        {
          "borderColor": "#4D4D4D",
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#131313",
          "borderRadius": 12,
          "height": 54,
          "justifyContent": "center",
          "width": 54,
        }
      }
    >
      <View
        style={
          {
            "height": 32,
            "position": "relative",
            "width": 24,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#4D4D4D",
              "borderRadius": 2,
              "height": 28,
              "left": 2,
              "position": "absolute",
              "top": 2,
              "width": 20,
            }
          }
        />
        <View
          style={
            {
              "backgroundColor": "#202020",
              "borderBottomLeftRadius": 4,
              "height": 8,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 8,
            }
          }
        />
      </View>
    </View>
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
          },
          {
            "color": "#4D4D4D",
            "fontFamily": "PlusJakartaSans-Medium",
            "fontSize": 12,
            "lineHeight": 20,
            "textAlign": "center",
          },
        ]
      }
    >
      Tap to upload your rental agreement
    </Text>
    <View
      style={
        {
          "backgroundColor": "#4D4D4D",
          "borderRadius": 200,
          "height": 2,
          "width": 24,
        }
      }
    />
  </View>
</View>
`;

exports[`FileUploadZone renders correctly - disabled state 1`] = `
<View
  accessibilityLabel="Tap to upload your rental agreement"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#202020",
          "borderColor": "#4D4D4D",
          "borderRadius": 12,
          "borderStyle": "dashed",
          "borderWidth": 1,
          "gap": 16,
          "paddingHorizontal": 16,
          "paddingVertical": 24,
        },
        {
          "borderColor": "#4D4D4D",
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#131313",
          "borderRadius": 12,
          "height": 54,
          "justifyContent": "center",
          "width": 54,
        }
      }
    >
      <View
        style={
          {
            "height": 32,
            "position": "relative",
            "width": 24,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#4D4D4D",
              "borderRadius": 2,
              "height": 28,
              "left": 2,
              "position": "absolute",
              "top": 2,
              "width": 20,
            }
          }
        />
        <View
          style={
            {
              "backgroundColor": "#202020",
              "borderBottomLeftRadius": 4,
              "height": 8,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 8,
            }
          }
        />
      </View>
    </View>
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
          },
          {
            "color": "#4D4D4D",
            "fontFamily": "PlusJakartaSans-Medium",
            "fontSize": 12,
            "lineHeight": 20,
            "textAlign": "center",
          },
        ]
      }
    >
      Tap to upload your rental agreement
    </Text>
    <View
      style={
        {
          "backgroundColor": "#4D4D4D",
          "borderRadius": 200,
          "height": 2,
          "width": 24,
        }
      }
    />
  </View>
</View>
`;

exports[`FileUploadZone renders correctly - with custom style 1`] = `
<View
  accessibilityLabel="Tap to upload your rental agreement"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#202020",
          "borderColor": "#4D4D4D",
          "borderRadius": 12,
          "borderStyle": "dashed",
          "borderWidth": 1,
          "gap": 16,
          "paddingHorizontal": 16,
          "paddingVertical": 24,
        },
        {
          "borderColor": "#4D4D4D",
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        {
          "marginTop": 24,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#131313",
          "borderRadius": 12,
          "height": 54,
          "justifyContent": "center",
          "width": 54,
        }
      }
    >
      <View
        style={
          {
            "height": 32,
            "position": "relative",
            "width": 24,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#4D4D4D",
              "borderRadius": 2,
              "height": 28,
              "left": 2,
              "position": "absolute",
              "top": 2,
              "width": 20,
            }
          }
        />
        <View
          style={
            {
              "backgroundColor": "#202020",
              "borderBottomLeftRadius": 4,
              "height": 8,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 8,
            }
          }
        />
      </View>
    </View>
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
          },
          {
            "color": "#4D4D4D",
            "fontFamily": "PlusJakartaSans-Medium",
            "fontSize": 12,
            "lineHeight": 20,
            "textAlign": "center",
          },
        ]
      }
    >
      Tap to upload your rental agreement
    </Text>
    <View
      style={
        {
          "backgroundColor": "#4D4D4D",
          "borderRadius": 200,
          "height": 2,
          "width": 24,
        }
      }
    />
  </View>
</View>
`;

exports[`FileUploadZone renders with empty placeholder 1`] = `
<View
  accessibilityLabel=""
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#202020",
          "borderColor": "#4D4D4D",
          "borderRadius": 12,
          "borderStyle": "dashed",
          "borderWidth": 1,
          "gap": 16,
          "paddingHorizontal": 16,
          "paddingVertical": 24,
        },
        {
          "borderColor": "#4D4D4D",
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#131313",
          "borderRadius": 12,
          "height": 54,
          "justifyContent": "center",
          "width": 54,
        }
      }
    >
      <View
        style={
          {
            "height": 32,
            "position": "relative",
            "width": 24,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#4D4D4D",
              "borderRadius": 2,
              "height": 28,
              "left": 2,
              "position": "absolute",
              "top": 2,
              "width": 20,
            }
          }
        />
        <View
          style={
            {
              "backgroundColor": "#202020",
              "borderBottomLeftRadius": 4,
              "height": 8,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 8,
            }
          }
        />
      </View>
    </View>
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
          },
          {
            "color": "#4D4D4D",
            "fontFamily": "PlusJakartaSans-Medium",
            "fontSize": 12,
            "lineHeight": 20,
            "textAlign": "center",
          },
        ]
      }
    />
    <View
      style={
        {
          "backgroundColor": "#4D4D4D",
          "borderRadius": 200,
          "height": 2,
          "width": 24,
        }
      }
    />
  </View>
</View>
`;
